<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.kpfu.itis.alliance.activities.TypeOfSystemActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tv_composit"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:fontFamily="@font/sfui_text_medium"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/composit"
        android:textColor="@color/black"
        android:textSize="@dimen/text_calculate_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/tv_keramogranit"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:fontFamily="@font/sfui_text_medium"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/keramogranit"
        android:textColor="@color/black"
        android:textSize="@dimen/text_calculate_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_composit" />

    <TextView
        android:id="@+id/tv_fibroplita"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:fontFamily="@font/sfui_text_medium"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/fibroplita"
        android:textColor="@color/black"
        android:textSize="@dimen/text_calculate_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_keramogranit" />

    <TextView
        android:id="@+id/tv_metallokaseta"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:fontFamily="@font/sfui_text_medium"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/metallokaseta"
        android:textColor="@color/black"
        android:textSize="@dimen/text_calculate_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fibroplita" />

    <RadioGroup
        android:id="@+id/radio_group_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <RadioButton
            android:id="@+id/checkBox_composite"
            android:layout_width="74dp"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="@+id/checkBox_metalokaseta"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <RadioButton
            android:id="@+id/checkBox_keramogranit"
            android:layout_width="74dp"
            android:layout_height="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_composite" />

        <RadioButton
            android:id="@+id/checkBox_fibroplita"
            android:layout_width="74dp"
            android:layout_height="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_keramogranit" />

        <RadioButton
            android:id="@+id/checkBox_metalokaseta"
            android:layout_width="74dp"
            android:layout_height="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_fibroplita" />

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
